# dlt-test

./: .env.sample  .gitignore  README.md  pyproject.toml  setup_db.sql  setup_views.sql  start_postgres.sh  stop_postgres.sh  test_pipeline.py
.dlt/: config.toml  secrets.toml.sample
airflow/dags/: dlt_native_dags.py
lib/: data_processing.py
tests/: conftest.py  test_db.py  test_dlt.py
